--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -35,7 +35,7 @@
             <p class="item-text">Quest #1</p>
           </label>
           <button class="item-text-refactror__btn btn" type="button">
-            <span class="visually-hidden">Readact text task</span>
+            <span class="visually-hidden">Redact text task</span>
           </button>
           <button class="item-delete-task__btn btn" type="button">
             <span class="visually-hidden">
@@ -50,7 +50,7 @@
             <p class="item-text">Quest #2</p>
           </label>
           <button class="item-text-refactror__btn btn" type="button">
-            <span class="visually-hidden">Readact text task</span>
+            <span class="visually-hidden">Redact text task</span>
           </button>
           <button class="item-delete-task__btn btn" type="button">
             <span class="visually-hidden">
