--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,77 +7,7 @@
   <title>Accom</title>
 </head>
 <body>
-  <header class="todo-header container">
-    <h1 class="todo-header__title">
-      ToDo
-    </h1>
-    <h3 class="todo-header__subtitle">Monday</h3>
-  </header>
-
-  <main class="todo-main container">
-    <section class="task-creator-section">
-      <form class="task-creator__form">
-        <label class="task-creator__label">
-          <input class="task-creator__input" type="text" placeholder="Add new task" />
-          <button class="task-creator__submit" type="button">
-            <span class="visually-hidden">Create New Task</span>
-          </button>
-        </label>
-      </form>
-    </section>
-
-    <section class="task-section">
-      <ul class="task-section__list">
-        <li class="task-section__item">
-          <label class="item__chekbox-label">
-            <input class="item__marker-checkbox visually-hidden" type="checkbox"/>
-            <span class="marker-checkbox checkbox"></span>
-            <p class="item-text">Quest #1</p>
-          </label>
-          <button class="item-text-refactror__btn btn" type="button">
-            <span class="visually-hidden">Redact text task</span>
-          </button>
-          <button class="item-delete-task__btn btn" type="button">
-            <span class="visually-hidden">
-              delete task
-            </span>
-          </button>
-        </li>
-        <li class="task-section__item">
-          <label class="item__chekbox-label">
-            <input class="item__marker-checkbox visually-hidden" type="checkbox"/>
-            <span class="marker-checkbox checkbox"></span>
-            <p class="item-text">Quest #2</p>
-          </label>
-          <button class="item-text-refactror__btn btn" type="button">
-            <span class="visually-hidden">Redact text task</span>
-          </button>
-          <button class="item-delete-task__btn btn" type="button">
-            <span class="visually-hidden">
-              delete task
-            </span>
-          </button>
-        </li>
-      </ul>
-    </section>
-  </main>
-
-  <footer class="todo-footer container">
-    <section class="sort-task-section">
-      <div class="sort-task__wrapper">
-        <button class="sort-task-section__complete-all-button button" type="button">All complete</button>
-        <button class="sort-task-section__remove-comlete-button button" type="button">Remove comlete</button>
-      </div>
-    </section>
-    <section class="todo-footer__total-table">
-      <p class="total-table__total-complete">
-        Total complete: 1
-      </p>
-      <p class="total-table__total-tasks">
-        Total tasks: 2
-      </p>
-    </section>
-  </footer>
+  <div class="root"></div>
   
   <script src="./index.js"></script>
 </body>
