--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="./index.css">
-  <title>Accom</title>
-</head>
-<body>
-  
-  <script src="./index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <title>ToDo</title>
+  </head>
+  <body>
+    <div class="visually-hidden">
+      <svg>
+        <symbol
+          id="task-checkbox"
+          width="18"
+          height="18"
+          viewBox="0 0 18 18"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M16 2V16H2V2H16ZM16 0H2C0.9 0 0 0.9 0 2V16C0 17.1 0.9 18 2 18H16C17.1 18 18 17.1 18 16V2C18 0.9 17.1 0 16 0Z"
+            style="fill: var(--fill-style, #ec966d)"
+          />
+        </symbol>
+      </svg>
+    </div>
+
+    <script src="./index.js"></script>
+  </body>
 </html>
