fix problem whit ading empty task

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -73,6 +73,20 @@
           style="fill: var(--icon-fill, #c2c2c2)"
         />
       </symbol>
+
+      <symbol
+        id="add-task-marker"
+        width="18"
+        height="18"
+        viewBox="0 0 18 18"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M14.25 9.75H9.75V14.25H8.25V9.75H3.75V8.25H8.25V3.75H9.75V8.25H14.25V9.75Z"
+          style="fill: var(--fill-icon, #333333)"
+        />
+      </symbol>
     </svg>
 
     <script src="./index.js"></script>
